# workshop-cnn

./: .gitignore  Readme.md  cnn-model.ipynb  exercise.md  exercise1.ipynb  load-run-model.ipynb  nn-model.ipynb  pyproject.toml  shared.py  test_env.py
.ipynb_checkpoints/: exercise1-checkpoint.ipynb
dataset/: link.md
